# SIMIEC

./: README.md  app.py  main.py  pyproject.toml
src/: advanced_analytics.py  analitics.py  analytics_consolidado.py  candidatos_lugares.csv  clean_load.py  config.py  geodiscovery.py  geoparsing.py  main.py  relaciones_lugares.csv  telegram_scraper.py
src/results/: candidatos_lugares.csv  datos_georeferenciados.csv  datos_rescatados.csv  relaciones_bloque_municipio.csv  relaciones_lugares.csv
src/utils/: __init__.py  text_processing.py
