[project]
name = "simiec"
version = "0.1.0"
description = "Sistema Integral de Monitorización de Incidencias Eléctricas basado en Crowdsourcing y Procesamiento de Lenguaje Natural"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "networkx>=3.4.2",
    "ipykernel>=7.1.0",
    "scikit-learn>=1.5.2",
    "wordcloud>=1.9.4",
]
